fix bounce scroll on ios

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -3,6 +3,9 @@ html, body {
   height: 100%
 }
 body {
+  position: fixed;
+  height: 100%;
+  width: 100%;
   overflow: hidden;
   max-width: 100%; 
   max-height: 100%;
